--- a/app/src/main/res/drawable/shape_live_house_gift_anim_bg.xml
+++ b/app/src/main/res/drawable/shape_live_house_gift_anim_bg.xml
@@ -5,6 +5,6 @@
 
     <gradient
         android:startColor="#44121212"
-        android:endColor="##00000000"/>
+        android:endColor="#00000000"/>
 
 </shape>
