--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -137,8 +137,7 @@
                 android:id="@+id/iv_gift_gif"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone"
-                android:layout_centerVertical="true"/>
+                android:visibility="gone" />
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
