--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -6,9 +6,28 @@
     android:background="@color/appBg"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/fragmentTitleText"
-        android:text="@string/home_title" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            style="@style/fragmentTitleText"
+            android:text="@string/home_title" />
+
+        <LinearLayout
+            android:id="@+id/ll_search"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:gravity="center">
+
+            <ImageButton
+                android:id="@+id/ib_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="@drawable/ic_search_home" />
+        </LinearLayout>
+    </RelativeLayout>
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refresh_layout"
