--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -194,9 +194,9 @@
     <style name="fragmentTitleText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">46dp</item>
-        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:background">#f9f9f9</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">#323232</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
     </style>
