--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -215,6 +215,20 @@
                     android:textSize="11sp"
                     android:visibility="gone" />
 
+                <com.whzl.mengbi.ui.widget.view.AutoScrollTextView2
+                    android:id="@+id/tv_run_way_broad"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+
+                    android:paddingBottom="8dp"
+                    android:paddingLeft="7dp"
+                    android:paddingRight="7dp"
+                    android:paddingTop="8dp"
+                    android:singleLine="true"
+                    android:textSize="12sp"
+                    android:visibility="gone" />
+
             </com.whzl.mengbi.ui.widget.view.RatioRelativeLayout>
 
 
