--- a/app/src/main/res/layout/item_anchor_home.xml
+++ b/app/src/main/res/layout/item_anchor_home.xml
@@ -35,8 +35,8 @@
         android:id="@+id/iv_is_live_mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="14dp"
         android:layout_marginTop="8dp"
+        android:layout_marginRight="14dp"
         android:src="@drawable/ic_home_live_middle"
         android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
@@ -44,7 +44,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="24dp"
+        android:layout_height="40dp"
         android:background="@drawable/shape_home_bottom_info_container"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -52,23 +52,29 @@
             android:id="@+id/tv_anchor_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="6dp"
-            android:textColor="@color/white"
+            android:layout_marginBottom="4dp"
+            android:ellipsize="end"
             android:maxLength="12"
             android:singleLine="true"
-            android:ellipsize="end"
-            android:textSize="14sp" />
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tv_watch_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="3dp"
+            android:layout_marginBottom="4dp"
             android:textColor="@color/white"
-            android:textSize="14sp" />
+            android:textSize="12sp"
+            android:textStyle="bold"/>
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
