--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -205,4 +205,10 @@
 
     <color name="text_content_free_gift">#90fefefe</color>
     <color name="tab_follow">#fdfdfd</color>
+
+    <color name="a_level_preety_num">#f42434</color>
+    <color name="b_level_preety_num">#FFFFD615</color>
+    <color name="c_level_preety_num">#9887f9</color>
+    <color name="d_level_preety_num">#5dbaf6</color>
+    <color name="e_level_preety_num">#5ecac2</color>
 </resources>
