--- a/app/src/main/res/layout/include_headline.xml
+++ b/app/src/main/res/layout/include_headline.xml
@@ -25,7 +25,6 @@
                 android:layout_centerInParent="true"
                 android:textColor="@color/black"
                 android:textSize="12sp"
-                android:text="未上榜"
                 android:textStyle="bold" />
 
         </RelativeLayout>
@@ -48,8 +47,7 @@
             android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="12sp"
-            android:textStyle="bold"
-            android:text="昵称"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_need_value"
@@ -58,7 +56,6 @@
             android:layout_below="@id/tv_nick_name"
             android:textColor="@color/tran_black2"
             android:textSize="9sp"
-            android:text="@string/app_name"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/iv_own_avatar" />
@@ -72,8 +69,7 @@
             android:layout_marginTop="10dp"
             android:singleLine="true"
             android:textColor="@color/tran_black2"
-            android:textSize="10sp"
-            android:text="@string/tip"/>
+            android:textSize="10sp" />
 
         <TextView
             android:id="@+id/tv_click_gift"
