--- a/app/src/main/res/layout/activity_wx_pay_entry.xml
+++ b/app/src/main/res/layout/activity_wx_pay_entry.xml
@@ -189,6 +189,7 @@
             </android.support.v7.widget.RecyclerView>
 
             <LinearLayout
+                android:id="@+id/ll_use_rebate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="11.5dp"
@@ -206,25 +207,47 @@
                     android:textColor="#70ff2b3f"
                     android:textSize="13sp" />
 
-                <TextView
-                    android:id="@+id/tv_rebate_ticket"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_rebate_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:gravity="end"
+                        android:singleLine="true"
+                        android:textColor="#ff2b3f"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/tv_rebate_money"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:gravity="end"
+                        android:singleLine="true"
+                        android:textColor="#ff2b3f"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_rebate_ticket"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5.5dp"
                     android:drawablePadding="5.5dp"
-                    android:drawableRight="@drawable/arrowright"
                     android:gravity="end"
                     android:textColor="#70000000"
                     android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/tv_rebate_money"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:singleLine="true"
-                    android:textColor="#909090"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
+                    android:src="@drawable/arrowright" />
             </LinearLayout>
 
             <Button
