--- a/app/src/main/res/layout/item_use_rebate.xml
+++ b/app/src/main/res/layout/item_use_rebate.xml
@@ -2,11 +2,73 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#5fc8ff"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_name"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ll_use_rebate"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="71.5dp"
+        android:layout_marginTop="11.5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="27dp"
+        android:paddingRight="24.5dp">
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_use_rebate_left"
+            android:gravity="center"
+            android:text="3%"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-1dp"
+            android:background="@drawable/bg_use_rebate_right"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="11.5dp">
+
+                <TextView
+                    android:id="@+id/tv_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ponit_use_rebate"
+                    android:drawablePadding="9dp"
+                    android:text="返利券"
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
+                    android:text="返利券"
+                    android:textColor="#70ffffff"
+                    android:textSize="9sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="11.5dp"
+                android:src="@drawable/ic_tick_use_rebate" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
