--- a/app/src/main/res/layout/empty_car_pack.xml
+++ b/app/src/main/res/layout/empty_car_pack.xml
@@ -8,23 +8,15 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:src="@drawable/ic_empty_prop" />
+        android:layout_marginTop="108dp"
+        android:src="@drawable/img_empty_follow" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="27.5dp"
         android:gravity="center"
-        android:text="您还没有座驾！"
-        android:textColor="@color/colorCommNotActive"
-        android:textSize="20sp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="升级到贵族，即可拥有专属座驾！"
-        android:textColor="@color/colorCommNotActive"
-        android:textSize="20sp" />
+        android:text="你还没有座驾，去商城逛一逛吧"
+        android:textColor="#60000000"
+        android:textSize="12sp" />
 </LinearLayout>
